--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -8,57 +8,60 @@
   </head>
   <body>
     <nav>
-        <ul>
-          <div class="logo">
-            <img
-              src="/admin-dashboard/assets/images/view-dashboard.svg"
-              style="width: 3em"
-              alt="" class="svg-logo"
-            />
-            <li>Dashboard</li>
-          </div>
-          <li class="nav-item">Home</li>
-          <li class="nav-item">Profile</li>
-          <li class="nav-item">Messages</li>
-          <li class="nav-item">History</li>
-          <li class="nav-item">Tasks</li>
-          <li class="nav-item">Communities</li>
-          <br /><br />
-          <li class="nav-item">Settings</li>
-          <li class="nav-item">Support</li>
-          <li class="nav-item">Privacy</li>
-        </ul>
-      </nav>
+      <ul>
+        <li class="logo">
+          <img
+            src="assets/images/view-dashboard.svg"
+            style="width: 2em"
+            alt=""
+            class="svg-logo"
+          />
+          <p>Dashboard</p>
+        </li>
+        <li class="nav-item">Home</li>
+        <li class="nav-item">Profile</li>
+        <li class="nav-item">Messages</li>
+        <li class="nav-item">History</li>
+        <li class="nav-item">Tasks</li>
+        <li class="nav-item">Communities</li>
+        <br /><br />
+        <li class="nav-item">Settings</li>
+        <li class="nav-item">Support</li>
+        <li class="nav-item">Privacy</li>
+      </ul>
+    </nav>
     <header>
-      <div class="row">
+      <div class="row first">
         <div class="left">
           <img
-            src="/admin-dashboard/assets/images/magnify.svg"
+            src="assets/images/magnify.svg"
             style="width: 2em"
             alt="search icon"
           />
-          <input type="text" />
+          <input type="text" class="search" />
         </div>
         <div class="right">
           <img
-            src="/admin-dashboard/assets/images/bell-ring-outline.svg"
-            style="width: 2em"
+            src="assets/images/bell-ring-outline.svg"
+            style="width: 1.5em"
             alt="notificataion icon"
           />
           <img
-            src="/admin-dashboard/assets/images/account-circle-outline.svg"
-            style="width: 2em"
+            src="assets/images/account-circle-outline.svg"
+            style="width: 3em"
             alt="profile image"
+            class="yellow"
           />
           <p>Morgan Oakley</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row second">
         <div class="left">
           <img
-            src="/admin-dashboard/assets/images/account-circle-outline.svg"
-            style="width: 3em"
+            src="assets/images/account-circle-outline.svg"
+            style="width: 4em"
             alt="profile image"
+            class="yellow"
           />
           <p>Hi there, <br /><strong>Morgan Oakley</strong>(@morgan)</p>
         </div>
@@ -69,14 +72,133 @@
         </div>
       </div>
     </header>
-    
+
     <main>
-      <div class="left">
+      <div class="project">
         <h2>Your Projects</h2>
+        <div class="card-left">
+          <div class="card-item">
+            <h3>Super Cool Project</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic
+              typesetting, remaining essentially unchanged.
+            </p>
+            <img src="/assets/images/share-variant-outline.svg" alt="">
+            <img src="/assets/images/eye-plus-outline.svg" alt="">
+            <img src="/assets/images/star-plus-outline.svg" srcset="">
+          </div>
+          <div class="card-item">
+            <h3>Less Cool Project</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic
+              typesetting, remaining essentially unchanged.
+            </p>
+            <img src="/assets/images/share-variant-outline.svg" alt="">
+            <img src="/assets/images/eye-plus-outline.svg" alt="">
+            <img src="/assets/images/star-plus-outline.svg" srcset="">
+          </div>
+          <div class="card-item">
+            <h3>Impossible App</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic
+              typesetting, remaining essentially unchanged.
+            </p>
+            <img src="/assets/images/share-variant-outline.svg" alt="">
+            <img src="/assets/images/eye-plus-outline.svg" alt="">
+            <img src="/assets/images/star-plus-outline.svg" srcset="">
+          </div>
+          <div class="card-item">
+            <h3>Easy Peasy App</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic
+              typesetting, remaining essentially unchanged.
+            </p>
+            <img src="/assets/images/share-variant-outline.svg" alt="">
+            <img src="/assets/images/eye-plus-outline.svg" alt="">
+            <img src="/assets/images/star-plus-outline.svg" srcset="">
+          </div>
+          <div class="card-item">
+            <h3>Ad Blocker</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic
+              typesetting, remaining essentially unchanged.
+            </p>
+            <img src="/assets/images/share-variant-outline.svg" alt="">
+            <img src="/assets/images/eye-plus-outline.svg" alt="">
+            <img src="/assets/images/star-plus-outline.svg" srcset="">
+          </div>
+          <div class="card-item">
+            <h3>Money Maker</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic
+              typesetting, remaining essentially unchanged.
+            </p>
+            <img src="/assets/images/share-variant-outline.svg" alt="">
+            <img src="/assets/images/eye-plus-outline.svg" alt="">
+            <img src="/assets/images/star-plus-outline.svg" srcset="">
+          </div>
+        </div>
       </div>
-      <div class="right">
-        <h2>Announcements</h2>
-        <h2>Trending</h2>
+      <div class="card-right">
+        <div class="announcements">
+          <h2>Announcements</h2>
+          <div class="content">
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500
+            </p>
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500
+            </p>
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500
+            </p>
+          </div>
+        </div>
+
+        <div class="trending">
+          <h2>Trending</h2>
+          <div class="content">
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500
+            </p>
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500
+            </p>
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500
+            </p>
+          </div>
+        </div>
       </div>
     </main>
   </body>
